5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1613_1805.log
== TEST (2019-04-04 13:07:52) 
-- CODE:
XA=float(input("digite XA:  "))
YA=float(input("digite YA:  "))
XB=float(input("digite XB:  "))
YB=float(input("digite YB:  "))
XM=(XB+XA)/2
YM=(YB+YA)/2
Print(round(XM,1))
print(round(YM,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Print(round(XM,1))
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:07:53) 
-- CODE:
XA=float(input("digite XA:  "))
YA=float(input("digite YA:  "))
XB=float(input("digite XB:  "))
YB=float(input("digite YB:  "))
XM=(XB+XA)/2
YM=(YB+YA)/2
Print(round(XM,1))
print(round(YM,1))
-- EXECUTION TIME:
0.111949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1805/main.py", line 7, in <module>
    Print(round(XM,1))
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:08:09) 
-- CODE:
XA=float(input("digite XA:  "))
YA=float(input("digite YA:  "))
XB=float(input("digite XB:  "))
YB=float(input("digite YB:  "))
XM=(XB+XA)/2
YM=(YB+YA)/2
print(round(XM,1))
print(round(YM,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:08:09) 
-- CODE:
XA=float(input("digite XA:  "))
YA=float(input("digite YA:  "))
XB=float(input("digite XB:  "))
YB=float(input("digite YB:  "))
XM=(XB+XA)/2
YM=(YB+YA)/2
print(round(XM,1))
print(round(YM,1))
-- EXECUTION TIME:
0.168062
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
